<?xml version="1.0"?>
<package format="3">
  <name>rrt</name>
  <version>0.0.0</version>
  <description>The RRT-Astar package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bchukkal@umd.edu"> Bharadwaj Chukkala - 118341705 </maintainer>
  <maintainer email="jkatak73@umd.edu"> Joseph Pranadeer Reddy Katakam - 117517958 </maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <depend>aruco_detect</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type> 

    <python directory="lib/${PROJECT_NAME}">
    <include>RRT_Astar.py</include>
    <include>pygame_utils.py</include>
    </python>

  </export>

</package>
